# rendering-demo

./: .gitignore  README.md
.github/workflows/: generate-docs.yml
crates/demo-app/: Cargo.toml
crates/demo-app/src/: camera.rs  main.rs  mesh.rs  renderer.rs
crates/rendering-engine/: Cargo.toml
crates/rendering-engine/src/: buffer.rs  destructible_objects.rs  device.rs  frame_resources.rs  image.rs  instance.rs  lib.rs  pipeline.rs  scene.rs  shader.rs  surface.rs  swapchain.rs
data/shaders/uncompiled/: mesh.frag  mesh.vert  triangle.frag  triangle.vert
