[package]
name = "demo-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.17"
rendering-engine = { path = "../rendering-engine" }
# Using winit 0.27.0 onwards requires a version of raw-window-handle which causes conflicts.
winit = "0.26.0"