[package]
name = "rendering-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.0"
ash-window = "0.11.0"
gpu-allocator = "0.18.0"
log = "0.4.17"
raw-window-handle = "0.4.3"
spirv-reflect = "0.2.3"